--- a/ProxyService/pom.xml
+++ b/ProxyService/pom.xml
@@ -57,10 +57,10 @@
             <version>3.4.4</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.36</version>
-            <scope>provided</scope>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.16.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
