Add CommentService skeleton, add  a bit kafka

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>PostService</module>
         <module>ProxyService</module>
+        <module>CommentService</module>
     </modules>
 
     <properties>
