--- a/CommentService/pom.xml
+++ b/CommentService/pom.xml
@@ -3,10 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>varta.grpc</groupId>
+        <artifactId>MySuperProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>ru.spring</groupId>
-    <artifactId>ProxyService</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>CommentService</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -14,27 +17,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-stub -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
             <version>1.70.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-protobuf -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
             <version>1.70.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-api -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-api</artifactId>
             <version>1.70.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-netty -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
@@ -52,6 +50,17 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>4.0.0-M2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>4.0.0-M2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.4.4</version>
@@ -63,7 +72,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 
     <build>
@@ -82,7 +90,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.4.4</version>
                 <configuration>
-                    <mainClass>ru.spring.Main</mainClass>
+                    <mainClass>varta.comment.Main</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -124,5 +132,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
