--- a/CommentService/src/main/resources/application.properties
+++ b/CommentService/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-server.port=50051
-
+server.port=8081
 spring.kafka.producer.bootstrap-servers=localhost:9092, localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+grpc.server.port=50051
+grpc.server.enable-reflection=true
