--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.4.4</version>
+        <relativePath/>
+    </parent>
+
     <groupId>varta.grpc</groupId>
     <artifactId>MySuperProject</artifactId>
     <version>1.0-SNAPSHOT</version>
