--- a/CommentService/pom.xml
+++ b/CommentService/pom.xml
@@ -3,17 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>varta.grpc</groupId>
-        <artifactId>MySuperProject</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 <!--    <parent>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
-<!--        <version>3.4.4</version>-->
-<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+<!--        <groupId>varta.grpc</groupId>-->
+<!--        <artifactId>MySuperProject</artifactId>-->
+<!--        <version>1.0-SNAPSHOT</version>-->
 <!--    </parent>-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.4.4</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <groupId>varta.comment</groupId>
     <artifactId>CommentService</artifactId>
