--- a/CommentService/src/main/resources/application.properties
+++ b/CommentService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
-spring.kafka.producer.bootstrap-servers=localhost:9092, localhost:9094
+spring.kafka.producer.bootstrap-servers=kafka-1:9092,kafka-2:9094,kafka-3:9096
+spring.kafka.bootstrap-servers=kafka-1:9092,kafka-2:9094,kafka-3:9096
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
