Reduce containers' size

--- a/PostService/Dockerfile
+++ b/PostService/Dockerfile
@@ -2,12 +2,13 @@ FROM maven:3.9.9-eclipse-temurin-23 AS build
 WORKDIR /app
 
 COPY pom.xml .
-COPY src ./src
+RUN mvn dependency:go-offline
 
+COPY src ./src
 RUN mvn clean package
 
 # Шаг 2: финальный образ с OpenJDK
-FROM openjdk:23
+FROM eclipse-temurin:23-jre-alpine AS runtime
 WORKDIR /app
 
 # Копируем собранный jar-файл из предыдущего контейнера
